--- a/.github/workflows/build_core.yml
+++ b/.github/workflows/build_core.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: carbonium-community/carbonium
+          token: ${{ secrets.PAT }}
       
       - name: Set up Go
         uses: actions/setup-go@v4
