feat: add support for windows and macos

--- a/.github/workflows/build_core.yml
+++ b/.github/workflows/build_core.yml
@@ -27,5 +27,92 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: carbonium
+          name: carbonium-linux
+          path: ./dist/carbonium
+
+  build_windows:
+    runs-on: 	windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: carbonium-community/carbonium
+          token: ${{ secrets.PAT }}
+      
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
+
+      - name: Build
+        run: go build -o ./dist/ github.com/carbonium-community/carbonium
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: carbonium-windows.exe
+          path: ./dist/carbonium.exe
+    build_windows:
+    runs-on: 	windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: carbonium-community/carbonium
+          token: ${{ secrets.PAT }}
+      
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
+
+      - name: Build
+        run: go build -o ./dist/ github.com/carbonium-community/carbonium
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: carbonium-windows.exe
+          path: ./dist/carbonium.exe
+
+  build_macos_arm64:
+    runs-on: 	macos-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: carbonium-community/carbonium
+          token: ${{ secrets.PAT }}
+      
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
+
+      - name: Build
+        run: go build -o ./dist/ github.com/carbonium-community/carbonium
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: carbonium-macos_arm64
+          path: ./dist/carbonium
+
+  build_macos_x86_64:
+    runs-on: macos-latest-large
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: carbonium-community/carbonium
+          token: ${{ secrets.PAT }}
+      
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
+
+      - name: Build
+        run: go build -o ./dist/ github.com/carbonium-community/carbonium
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: carbonium-macos_x86_64
           path: ./dist/carbonium
